[package]
name = "git-branch-picker"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.6"
skim = "0.8.2"
anyhow = "1.0.31"
chrono = "0.4.12"
